fix(table): set operation column align left when theme is boxed

--- a/src/table/styles/table.scss
+++ b/src/table/styles/table.scss
@@ -268,6 +268,7 @@
             thead td {
                 background-color: variables.$gray-100 !important;
             }
+
             tbody {
                 th,
                 td {
@@ -280,6 +281,10 @@
                         border-bottom: variables.$table-border-width solid variables.$gray-200;
                     }
                 }
+            }
+
+            .thy-operation-links {
+                text-align: left;
             }
         }
     }
